media/style.css
@font-face {
  font-family: "Omori-Font";
  src: url('./fonts/OMORI_GAME2.ttf');
}

* {
  font-family: "Omori-Font";
}
body {
  --white: #ffffff;
  --dark: #000000;
  font-family: "Omori-Font";
  display: flex;
  margin: 0;
  font-size: 1.5rem;
  flex-direction: column;
}
.dark{
  --white: #000000;
  --dark: #ffffff;
}
html,
body {
  user-select: none;
  color: black;
  height: 100%;
}

main {
  background-color: var(--white);
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.carpet{
  margin-top: 100px;
  border: 4px solid var(--dark);
  width: 600px;
  height: 450px;
  min-width: 200px;
  min-height: 100px;
  display: flex;
  flex-direction: row;
  position: relative;
}
.mewo{
  position: absolute;
  bottom: 0;
}
.light-bulb{
  display: flex;
  align-items: center;
  justify-content: center;
}
#debug{
  color: var(--dark);
  font-size: 200px;
}
#bulb{
  position: absolute;
  cursor: pointer;
  margin: 0;
  padding: 0;
  top: 0;
  right: 0;
}

#shadow{
  filter: drop-shadow(0 0 10px black);
  position: absolute;
  top: 50%;
  left: 65%;
}
header fieldset{
  margin: 0;
  padding: 0;
  padding-left: 5px;
  padding-right: 5px;
  border-radius: 10px;
  margin-top: 5px;
  margin-bottom: 5px;
  cursor: pointer;
  border: 2px solid rgb(255, 255, 255, 0.50);
}
header {
  align-items: center;
  user-select: none;
  box-sizing: border-box;
  padding-left: 10px;
  padding-right: 10px;
  border-radius: 0 0 10px 10px;
  border: 2px solid rgb(255, 255, 255, 0.05);
  position: fixed;
  min-height: 2rem;
  background-color: rgb(255, 255, 255, 0.15);
  width: 100%;
  display: flex;
  justify-content: space-between;
}

